Refactor WebDriver management and improve setting timeouts
This update refactors the way WebDriver instances are managed and now allows for setting timeout and polling interval values from a configuration file. Also, a new exception class 'NoSuchSortException.java' is added to handle sorting type mismatches. Additionally, file handling and file path generation are now more cross-platform compatible. Some enhancements in logging and application efficiency have also been made.